# pypractice

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new-enhancement-story.md
.github/workflows/: feature-checks.yml  main-build.yml  main-tests.yml  pr-test-checks.yml  pypi-test-release.yml
docs/: docs-requirements.txt
docs/src/: conf.py  index.rst  overview.rst  user.rst
src/pypractice/: __init__.py  exceptions.py  user.py
tests/: test_hello.py  test_user_class.py
